--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ a {
   
   padding: 40px 0;
   height: 750px;
-  background-color: pink;
+  background-color: #b8f331;
 }
 
 .header-container h1 {
